--- a/CRM/CRM_GUI/DzialaniaWindow.xaml
+++ b/CRM/CRM_GUI/DzialaniaWindow.xaml
@@ -8,7 +8,7 @@
         Title="Działania" Height="450" Width="800">
     <Grid>
         <ListBox x:Name="lstDzialania" HorizontalAlignment="Left" Height="291" Margin="23,83,0,0" VerticalAlignment="Top" Width="500"/>
-        <Button x:Name="buttonDodajDzialanie" Content="Dodaj działanie" HorizontalAlignment="Left" Height="34" Margin="565,181,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
+        <Button x:Name="buttonDodajDzialanie" Content="Dodaj działanie" HorizontalAlignment="Left" Height="34" Margin="565,181,0,0" VerticalAlignment="Top" Width="195" FontSize="14" Click="buttonDodajDzialanie_Click"/>
         <Button x:Name="buttonEdytujDzialanie" Content="Edytuj działanie" HorizontalAlignment="Left" Height="34" Margin="565,220,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
         <Button x:Name="buttonUsunDzialanie" Content="Usuń działanie" HorizontalAlignment="Left" Height="34" Margin="565,259,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
         <Button x:Name="buttonWszUsunDzialania" Content="Usuń wszystkie" HorizontalAlignment="Left" Height="34" Margin="565,340,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
